--- a/src/iOS/StudyBuddy/StudyBuddy/Base.lproj/Main.storyboard
+++ b/src/iOS/StudyBuddy/StudyBuddy/Base.lproj/Main.storyboard
@@ -167,25 +167,27 @@
             </objects>
             <point key="canvasLocation" x="3829.5999999999999" y="808.24587706146929"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="DRd-Pk-2l9">
+        <!--Create Group Third View Controller-->
+        <scene sceneID="qXY-Se-cwT">
             <objects>
-                <tableViewController id="070-Wq-z8H" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="gB2-kt-lJj">
+                <viewController id="KEP-Qs-poe" customClass="CreateGroupThirdViewController" customModule="StudyBuddy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="65l-8J-PIB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <sections>
-                            <tableViewSection headerTitle="Pick a location on the map" id="446-JL-cyo">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="351" id="Xug-Ir-9Vs">
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="rQe-YS-yyr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="540"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="351" id="qrn-hP-NeO">
                                         <rect key="frame" x="0.0" y="55.5" width="375" height="351"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xug-Ir-9Vs" id="cFi-HL-pC9">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qrn-hP-NeO" id="jmQ-mC-Eej">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="350.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Lc-NH-bfA">
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pb9-b5-pJe">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="351"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="1" green="0.21960784310000001" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -193,40 +195,43 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                            <tableViewSection headerTitle="Location Details" id="Fm1-ev-Rrx">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="82" id="QxR-rB-zZa">
-                                        <rect key="frame" x="0.0" y="462.5" width="375" height="82"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="82" id="XsG-mQ-QpY">
+                                        <rect key="frame" x="0.0" y="406.5" width="375" height="82"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QxR-rB-zZa" id="gT3-sq-qzc">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XsG-mQ-QpY" id="21W-Ls-9eD">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="81.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Enter description of your location (Bldg, Room #)" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="F9v-0v-Zcf">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Enter description of your location (Bldg, Room #)" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4RK-SP-MuS">
                                                     <rect key="frame" x="16" y="11" width="343" height="60"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
-                        <connections>
-                            <outlet property="dataSource" destination="070-Wq-z8H" id="ioQ-qs-0hT"/>
-                            <outlet property="delegate" destination="070-Wq-z8H" id="CeG-NM-3wU"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="adm-7p-FYL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IO0-VI-n5N">
+                                <rect key="frame" x="16" y="612" width="343" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.60392156860000001" green="0.84313725490000002" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="GvC-7m-eCa"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w7C-Uj-Vlz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5358" y="809"/>
+            <point key="canvasLocation" x="5377" y="808"/>
         </scene>
         <!--Group Page View Controller-->
         <scene sceneID="dNP-V3-sfa">
@@ -1028,7 +1033,7 @@
                                 </state>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="pIw-ts-qNG">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="539"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="64" id="LiO-Cs-kmg">
@@ -1104,12 +1109,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="pIw-ts-qNG" firstAttribute="top" secondItem="jTE-GY-tkk" secondAttribute="top" id="6Lf-d2-iyy"/>
                             <constraint firstItem="hda-EK-r3G" firstAttribute="top" secondItem="pIw-ts-qNG" secondAttribute="bottom" constant="8" id="6yd-Tc-9GD"/>
                             <constraint firstItem="hda-EK-r3G" firstAttribute="top" secondItem="pIw-ts-qNG" secondAttribute="bottom" constant="8" id="72V-ZQ-d3w"/>
                             <constraint firstItem="pIw-ts-qNG" firstAttribute="leading" secondItem="DAc-P1-OJw" secondAttribute="leading" id="Ll3-j9-naN"/>
                             <constraint firstItem="DAc-P1-OJw" firstAttribute="trailing" secondItem="hda-EK-r3G" secondAttribute="trailing" constant="16" id="M9J-zk-SJI"/>
                             <constraint firstItem="DAc-P1-OJw" firstAttribute="bottom" secondItem="hda-EK-r3G" secondAttribute="bottom" constant="10" id="SDF-Im-q5V"/>
+                            <constraint firstItem="pIw-ts-qNG" firstAttribute="top" secondItem="DAc-P1-OJw" secondAttribute="top" id="ZaL-M7-8Ol"/>
                             <constraint firstItem="hda-EK-r3G" firstAttribute="leading" secondItem="DAc-P1-OJw" secondAttribute="leading" constant="16" id="bgK-9f-wLd"/>
                             <constraint firstItem="pIw-ts-qNG" firstAttribute="trailing" secondItem="DAc-P1-OJw" secondAttribute="trailing" id="fvL-fa-wCB"/>
                         </constraints>
@@ -1117,7 +1122,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="QLm-nf-o4G"/>
                     <connections>
-                        <segue destination="070-Wq-z8H" kind="show" id="sCm-6O-DZx"/>
+                        <segue destination="KEP-Qs-poe" kind="show" id="NVP-XJ-Wdl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQq-0e-j1C" userLabel="First Responder" sceneMemberID="firstResponder"/>
